Added Dragonfly and tried custom damage source

--- a/src/main/resources/assets/dragonquestcraft/lang/en_us.json
+++ b/src/main/resources/assets/dragonquestcraft/lang/en_us.json
@@ -7,5 +7,7 @@
 
   "entity.dragonquestcraft.platypunk": "Platypunk",
   "entity.dragonquestcraft.dracky": "Dracky",
-  "entity.dragonquestcraft.blueslime": "Slime"
+  "entity.dragonquestcraft.blueslime": "Slime",
+
+  "death.attack.dragonquestcraft.breedingmsg":"%1$s quietly left..."
 }
