Added egg items and changed tonguella sound

--- a/src/main/resources/assets/dragonquestcraft/lang/en_us.json
+++ b/src/main/resources/assets/dragonquestcraft/lang/en_us.json
@@ -4,6 +4,12 @@
   "item.dragonquestcraft.platypunk_egg": "Platypunk Egg",
   "item.dragonquestcraft.dracky_egg": "Dracky Egg",
   "item.dragonquestcraft.blueslime_egg": "Slime Egg",
+  "item.dragonquestcraft.tonguella_egg": "Tonguella Egg",
+  "item.dragonquestcraft.picky_egg": "Picky Egg",
+  "item.dragonquestcraft.wingslime_egg": "Wingslime Egg",
+  "item.dragonquestcraft.spotslime_egg": "Spotslime Egg",
+  "item.dragonquestcraft.bullbird_egg": "Bullbird Egg",
+  "item.dragonquestcraft.catfly_egg": "Catfly Egg",
 
   "entity.dragonquestcraft.platypunk": "Platypunk",
   "entity.dragonquestcraft.dracky": "Dracky",
